# eafit-tesis

./: .env.template  README.md  pyproject.toml
data/asc_842/: grt_ai_reader_questions_v1.xlsx  grt_ai_reader_questions_v2.xlsx  grt_ai_reader_questions_v3.xlsx  grt_ai_reader_questions_v4.xlsx
notebooks/: 00_documents_preprocessing.ipynb  01_lessor_name_answers.ipynb  01_lessor_name_answers_single_exp.ipynb  02_effective_date_answers.ipynb  03_commencement_date_answers.ipynb  04_end_date_answers.ipynb  05_option_to_purchase_answers.ipynb  05_option_to_purchase_answers_single_exp.ipynb  06_option_to_extend_answers.ipynb  06_option_to_extend_answers_single_exp.ipynb  07_option_to_terminate_lessee.ipynb  08_option_to_terminate_lessor.ipynb  correct_analysis.ipynb  eda.ipynb  edgar.ipynb  metadata.xlsx  pdf_comparer.ipynb
notebooks/aggregated_results/: correct_results.xlsx  test_dataset.xlsx  train_dataset.xlsx
notebooks/all_questions_processing/: 01_lessor_name_answers.ipynb  02_effective_date_answers.ipynb  03_commencement_date_answers.ipynb  04_end_date_answers.ipynb  05_option_to_purchase_answers.ipynb  06_option_to_extend_answers.ipynb  07_option_to_terminate_lessee.ipynb  08_option_to_terminate_lessor.ipynb
notebooks/classic_models/: PDF_reader.ipynb  bert_base_ner_pypdf2.ipynb
notebooks/documents_preprocessing/: documents_preprocessing.ipynb
notebooks/error_analysis/: lessor_name_error_analysis.xlsx
notebooks/models/: NER_dates.ipynb  bert_base_ner_pymupdf.ipynb
notebooks/prompt_tuning/: 01_lessor_name_answers.ipynb  01_lessor_name_answers_v2.ipynb  02_lessor_name_answers_v3.ipynb  03_lessor_name_answers_v4.ipynb  04_lessor_name_answers_v5.ipynb  05_lessor_name_answers_v6.ipynb  06_lessor_name_answers_v7.ipynb
notebooks/results/: commencement_date_experiment1.csv  commencement_date_experiment10.csv  commencement_date_experiment5.csv  commencement_date_experiment6.csv  commencement_date_experiment8.csv  commencement_date_experiment9.csv  effective_date_experiment1.csv  effective_date_experiment11.csv  effective_date_experiment2.csv  effective_date_experiment3.csv  effective_date_experiment5.csv  end_date_experiment1.csv  end_date_experiment12.csv  end_date_experiment2.csv  end_date_experiment3.csv  end_date_experiment5.csv  end_date_experiment7.csv  end_date_experiment8.csv  end_date_experiment9.csv  (+35 more)
(+326 files in other folders)
