[project]
name = "eafit_tesis"
version = "0.1.0"
description = "Proyecto de grado EAFIT"
authors = [{ name = "David Armendariz", email = "david.adrian.a.p@gmail.com" }]
dependencies = [
  "langchain>=0.2.15",
  "pypdf>=4.3.1",
  "langchain-openai>=0.1.23",
  "python-dotenv>=1.0.1",
  "langchain-community>=0.2.15",
  "pinecone-client>=5.0.1",
  "langchain-pinecone>=0.1.3",
  "fastapi>=0.112.2",
  "uvicorn>=0.30.6",
  "boto3>=1.35.10",
  "unstructured[pdf]>=0.15.9",
  "numpy>=1.26.4",
]
requires-python = "<3.12,>=3.11"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = false
name = "pip_conf_index_global"

[tool.pdm.dev-dependencies]
dev = [
  "mypy>=1.11.2",
  "sec-api>=1.0.20",
  "notebook>=7.2.2",
  "streamlit>=1.38.0",
  "spacy>=3.7.6",
  "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl",
  "fuzzywuzzy[speedup]>=0.18.0",
  "huggingface-hub>=0.24.6",
  "datasets>=2.21.0",
  "pdfkit>=1.0.0",
  "PyPDF2>=3.0.1",
  "openpyxl>=3.1.5",
  "nltk>=3.9.1",
  "accelerate>=0.33.0",
  "transformers>=4.44.2",
  "sentence-transformers>=3.0.1",
  "pymupdf>=1.24.10",
  "langchain-cli>=0.0.30",
  "tiktoken>=0.7.0",
  "plotly>=5.24.0",
  "pandas>=2.2.2",
]

[tool.pdm.scripts]
_.env_file = ".env"
